--- a/linke/index.html
+++ b/linke/index.html
@@ -39,7 +39,7 @@
         <strong>Politische Ausrichtung:</strong> Links, sozialistisch,
         demokratisch-sozialistisch
       </p>
-      <h3>Kontroversen</h3>
+      <h3>FCATS</h3>
       <p>
         <strong>Vorwurf des Linksextremismus und Verfassungstreue:</strong> DIE
         LINKE wird von politischen Gegnern und Medien immer wieder dem
