--- a/spd/esken/index.html
+++ b/spd/esken/index.html
@@ -89,7 +89,7 @@
             Gerechtigkeit, Klimaschutz und Bildung
           </p>
 
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             Esken wurde wiederholt negativ auffällig, etwa durch ihre
             Bezeichnung von Corona-Protestierenden als „Covidioten“ und ihre
