--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -85,7 +85,7 @@
             Rechtsextremismus
           </p>
 
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             Faeser fiel wiederholt durch fragwürdige Entscheidungen und
             Äußerungen auf: Ihre Besetzung des BfV-Chefpostens sorgte für
@@ -146,32 +146,36 @@
         <div class="collapsible-content">
           <p class="party-highlight-description">
             Im Mai 2022 trug Faeser beim WM-Auftakt der deutschen
-            Nationalmannschaft in Katar eine Regenbogenbinde und setzte damit
-            ein deutliches Zeichen für Offenheit und Vielfalt. Die ganze Welt
+            Nationalmannschaft in Katar eine
+            <strong>Regenbogenbinde</strong> und setzte damit ein deutliches
+            Zeichen für <strong>Offenheit und Vielfalt</strong>. Die ganze Welt
             lachte über die Binde und die politische Ablenkung, die das Team
-            noch tiefer in ideologische Debatten verstrickte. Kritiker
+            noch tiefer in ideologische Debatten verstrickte.
+            <mark class="spd">Kritiker</mark>
             behaupten, dass diese unnötige Thematik mehr zum Versagen der
             Mannschaft beitrug als jede taktische Fehlentscheidung – schließlich
             hätte man sich vielleicht lieber auf das Spiel konzentrieren sollen.
           </p>
           <p class="party-highlight-description">
-            Warum die WM ausgerechnet nach Katar vergeben wurde, einem Land mit
-            einer katastrophalen Menschenrechtsbilanz, ist völlig
+            Warum die WM ausgerechnet nach
+            <mark class="spd">Katar</mark> vergeben wurde, einem Land mit einer
+            <strong>katastrophalen Menschenrechtsbilanz</strong>, ist völlig
             unverständlich. Hätte man sich das nicht schon vorher überlegen
-            können? Oder war es doch eher eine Frage des Geldes und politischer
-            Interessen, die den sportlichen Erfolg in den Hintergrund rückten?
+            können? Oder war es doch eher eine Frage des
+            <strong>Geldes und politischer Interessen</strong>, die den
+            sportlichen Erfolg in den Hintergrund rückten?
           </p>
 
           <div class="smallvideo-container">
             <div class="video-wrapper">
-            <iframe
-              src="https://www.youtube.com/embed/hA0OQm8Gecs?si=qlXgxpxDltFS9I88"
-              title="WM 2022: Nach der Pleite gegen Japan herrscht Krisen-Stimmung in Katar"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+              <iframe
+                src="https://www.youtube.com/embed/hA0OQm8Gecs?si=qlXgxpxDltFS9I88"
+                title="WM 2022: Nach der Pleite gegen Japan herrscht Krisen-Stimmung in Katar"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Mai 2022
@@ -221,33 +225,35 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Am 15. Juli 2023 nahm Nancy Faeser als Bundesinnenministerin am CSD
-            in Frankfurt teil. Besonders bemerkenswert war, dass sie, nachdem
-            sie zuvor bei den Corona-Demos noch mahnte, man solle vorsichtig
-            sein, mit wem man da marschiere, nun selbst Seite an Seite mit
-            vermummten Demonstranten zog, die zu Hass und Gewalt gegen die
-            Polizei aufriefen. Das Symbol „1312“, das für „ACAB“ („Alle Cops
-            sind Bastarde“) steht, war ebenfalls präsent – ein interessanter
-            Gegensatz zu Faesers Rolle als Innenministerin, die eigentlich für
-            den Schutz der Polizei zuständig ist.
+            Am 15. Juli 2023 nahm <strong>Nancy Faeser</strong> als
+            <strong>Bundesinnenministerin</strong> am CSD in Frankfurt teil.
+            Besonders bemerkenswert war, dass sie, nachdem sie zuvor bei den
+            Corona-Demos noch mahnte, man solle vorsichtig sein, mit wem man da
+            marschiere, nun selbst Seite an Seite mit vermummten Demonstranten
+            zog, die zu Hass und Gewalt gegen die Polizei aufriefen. Das Symbol
+            „1312“, das für „ACAB“ („Alle Cops sind Bastarde“) steht, war
+            ebenfalls präsent – ein interessanter Gegensatz zu Faesers Rolle als
+            Innenministerin, die eigentlich für den Schutz der Polizei zuständig
+            ist.
           </p>
           <p class="party-highlight-description">
             Statt sich in ihrer Funktion als Ministerin von solchen
             Gruppierungen abzugrenzen, marschierte Faeser direkt mit ihnen – ein
-            mutiger Schritt, der mal wieder ihre korrekte Haltung zu Vielfalt
-            und Offenheit klarmachte.
+            mutiger Schritt, der mal wieder ihre korrekte Haltung zu
+            <mark class="spd">Vielfalt</mark> und
+            <mark class="spd">Offenheit</mark> klarmachte.
           </p>
 
           <div class="smallvideo-container">
             <div class="video-wrapper">
-            <iframe
-              src="https://www.youtube.com/embed/ZnV5td6qX8E?si=ILBEHmhE8VUthJgB"
-              title="CSD Frankfurt 2023 mit Nancy Faeser"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+              <iframe
+                src="https://www.youtube.com/embed/ZnV5td6qX8E?si=ILBEHmhE8VUthJgB"
+                title="CSD Frankfurt 2023 mit Nancy Faeser"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Juli 2023
