--- a/spd/index.html
+++ b/spd/index.html
@@ -42,7 +42,7 @@
       <p>
         <strong>Politische Ausrichtung:</strong> Mitte-links, sozialdemokratisch
       </p>
-      <h3>Highlights</h3>
+      <h3>FACTS</h3>
       <p>
         <strong>Impfpflicht-Abstimmung 2022:</strong> Im April 2022 stimmten die
         SPD-Abgeordneten im Bundestag für eine allgemeine Impfpflicht gegen
@@ -132,8 +132,8 @@
             <a href="../../gruene/">Grünen</a> im Bundestag für eine allgemeine
             Impfpflicht gegen COVID-19. Diese Entscheidung stieß auf
             <strong>massive Ablehnung</strong> und führte zu
-            <mark>landesweiten Protesten</mark>, da viele Menschen die
-            Zwangsmaßnahme als einen direkten Angriff auf ihre
+            <mark class="spd">landesweiten Protesten</mark>, da viele Menschen
+            die Zwangsmaßnahme als einen direkten Angriff auf ihre
             <strong>persönlichen Freiheiten</strong> und ihr Recht auf
             <strong>körperliche Unversehrtheit</strong> sahen.
           </p>
@@ -157,11 +157,11 @@
           </p>
           <p class="party-highlight-description">
             Zudem war der Nutzen der sogenannten "Impfung"
-            <mark>fragwürdig</mark>. Viele gesundheitliche Risiken und
-            Nebenwirkungen wurden entweder verschwiegen oder heruntergespielt.
-            Eine ordentliche Aufklärung über mögliche Risiken und langfristige
-            Auswirkungen wurde weitestgehend verhindert, wodurch die Menschen in
-            ihrer <strong>Entscheidungsfreiheit</strong>
+            <mark class="spd">fragwürdig</mark>. Viele gesundheitliche Risiken
+            und Nebenwirkungen wurden entweder verschwiegen oder
+            heruntergespielt. Eine ordentliche Aufklärung über mögliche Risiken
+            und langfristige Auswirkungen wurde weitestgehend verhindert,
+            wodurch die Menschen in ihrer <strong>Entscheidungsfreiheit</strong>
             und -kompetenz massiv eingeschränkt wurden.
           </p>
           <p class="party-highlight-description">
@@ -243,25 +243,27 @@
             Der <b>Cum-Ex-Skandal</b> offenbarte einen massiven Steuerbetrug,
             bei dem Banken und Investoren <b>Kapitalertragssteuer</b> mehrfach
             erstattet bekamen, obwohl diese nie gezahlt worden war. Der Betrug
-            führte zu einem Schaden von <mark>mehreren Milliarden Euro</mark>,
-            den der deutsche Staat nie vollständig zurückerhielt.
+            führte zu einem Schaden von
+            <mark class="spd">mehreren Milliarden Euro</mark>, den der deutsche
+            Staat nie vollständig zurückerhielt.
           </p>
           <p class="party-highlight-description">
             Besonders brisant ist die Rolle von <b>Olaf Scholz</b> in der
             <b>Warburg-Affäre</b>. Als <b>Bürgermeister von Hamburg</b> traf er
             sich mehrfach mit <b>Christian Olearius</b>, dem Mitinhaber der
             <b>Warburg Bank</b>. Kurz danach verzichtete die Stadt Hamburg auf
-            eine Steuer-Rückforderung von <mark>47 Millionen Euro</mark>. Erst
-            auf Druck des Bundes musste Warburg das Geld später doch
-            zurückzahlen.
+            eine Steuer-Rückforderung von
+            <mark class="spd">47 Millionen Euro</mark>. Erst auf Druck des
+            Bundes musste Warburg das Geld später doch zurückzahlen.
           </p>
           <p class="party-highlight-description">
             Scholz behauptet bis heute, er könne sich an die Inhalte der Treffen
-            nicht erinnern. Diese <mark>„Erinnerungslücken“</mark> wiederholten
-            sich im Untersuchungsausschuss, wo er jede Einflussnahme abstritt.
-            Besonders pikant: Beim SPD-Politiker <b>Johannes Kahrs</b> wurden
-            später <mark>über 200.000 Euro in bar</mark> in einem Schließfach
-            gefunden.
+            nicht erinnern. Diese
+            <mark class="spd">„Erinnerungslücken“</mark> wiederholten sich im
+            Untersuchungsausschuss, wo er jede Einflussnahme abstritt. Besonders
+            pikant: Beim SPD-Politiker <b>Johannes Kahrs</b> wurden später
+            <mark class="spd">über 200.000 Euro in bar</mark> in einem
+            Schließfach gefunden.
           </p>
 
           <p class="party-highlight-date">
@@ -361,21 +363,21 @@
             Der <b>Wirecard-Skandal</b> war einer der größten Finanzskandale in
             Deutschland. Das Unternehmen <b>Wirecard</b> hatte über Jahre hinweg
             <b>Bilanzfälschungen</b> betrieben. Es stellte sich heraus, dass
-            Wirecard angeblich <mark>1,9 Milliarden Euro</mark> auf seinen
-            Konten hatte, die es nie besaß. Der Skandal führte zum
+            Wirecard angeblich <mark class="spd">1,9 Milliarden Euro</mark> auf
+            seinen Konten hatte, die es nie besaß. Der Skandal führte zum
             <b>Zusammenbruch des Unternehmens</b>.
           </p>
           <p class="party-highlight-description">
             Eine wichtige Rolle spielte die <b>BaFin</b>, die
             <b>Warnungen ignorierte</b>. Besonders im Fokus stand
             <b>Olaf Scholz</b>, damals <b>Finanzminister</b>.
-            <mark
+            <mark class="spd"
               >Kritiker werfen ihm vor, den Skandal nicht rechtzeitig erkannt zu
               haben.</mark
             >
           </p>
           <p class="party-highlight-description">
-            <mark
+            <mark class="spd"
               >Scholz traf sich 2019 mit dem Wirecard-CEO Markus Braun.</mark
             >
             Es gab <b>Spekulationen</b>, dass er nicht ausreichend auf Warnungen
@@ -469,8 +471,8 @@
           <p class="party-highlight-description">
             Der Angriff wurde
             <b>ohne Mandat des UN-Sicherheitsrats</b> durchgeführt und war daher
-            <mark>völkerrechtswidrig</mark>. Nach geltendem Völkerrecht war die
-            Bombardierung <b>illegal</b>, da sie gegen das
+            <mark class="spd">völkerrechtswidrig</mark>. Nach geltendem
+            Völkerrecht war die Bombardierung <b>illegal</b>, da sie gegen das
             <b>Gewaltverbot der UN-Charta</b> verstieß. Besonders die
             <b>deutsche Regierung unter Gerhard Schröder (SPD)</b> und die
             <b>Grünen</b> spielten eine entscheidende Rolle bei der Beteiligung
