--- a/spd/klingbeil/index.html
+++ b/spd/klingbeil/index.html
@@ -83,7 +83,7 @@
             Digitalisierung
           </p>
 
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             Klingbeil trug mit seinen wiederholten, polarisierenden Aussagen
             über die AfD zur weiteren Eskalation des politischen Diskurses bei
@@ -94,6 +94,7 @@
             Antifa-Bewegung. Im April 2022 stimmte er für die allgemeine
             Corona-Impfpflicht.
           </p>
+          <p>Im April 2022 stimmte er für die allgemeine Corona-Impfpflicht.</p>
         </div>
 
         <img
@@ -133,19 +134,19 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Klingbeil bezeuchnet die AfD Alice Weidel als Nazis.
+            Klingbeil bezeichnet die AfD und Alice Weidel als Nazis.
           </p>
 
-<div class="smallvideo-container">
-  <div class="video-wrapper">
-    <iframe
-              src="https://www.youtube.com/embed/0J7BjiDOOnw?si=epWuwwc4rpGnfldF"
-              title="'Haben Sie mich gerade als Nazi bezeichnet?'' - Parteichefs geraten aneinander | ntv"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+          <div class="smallvideo-container">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/0J7BjiDOOnw?si=epWuwwc4rpGnfldF"
+                title="'Haben Sie mich gerade als Nazi bezeichnet?'' - Parteichefs geraten aneinander | ntv"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-        </div>
 
           <p class="party-highlight-date"><strong>Zeitraum:</strong> 2025</p>
 
