--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -91,7 +91,7 @@
             Wirtschaftspolitik, EU-Integration
           </p>
 
-          <h3>Highlights</h3>
+          <h3>FACTS</h3>
           <p>
             Olaf Scholz blieb bei verschiedenen Skandalen wie Cum-Ex, Wirecard
             und dem G20-Fiasko in Hamburg Verantwortung schuldig und zeigte
@@ -146,7 +146,7 @@
             Der <b>Cum-Ex-Skandal</b> offenbarte einen massiven Steuerbetrug,
             bei dem Banken und Investoren <b>Kapitalertragssteuer</b> mehrfach
             erstattet bekamen, obwohl diese nie gezahlt worden war. Der Betrug
-            führte zu einem Schaden von <mark>mehreren Milliarden Euro</mark>,
+            führte zu einem Schaden von <mark class="spd">>mehreren Milliarden Euro</mark>,
             den der deutsche Staat nie vollständig zurückerhielt.
           </p>
           <p class="party-highlight-description">
@@ -154,18 +154,20 @@
             <b>Warburg-Affäre</b>. Als <b>Bürgermeister von Hamburg</b> traf er
             sich mehrfach mit <b>Christian Olearius</b>, dem Mitinhaber der
             <b>Warburg Bank</b>. Kurz danach verzichtete die Stadt Hamburg auf
-            eine Steuer-Rückforderung von <mark>47 Millionen Euro</mark>. Erst
+            eine Steuer-Rückforderung von <mark class="spd">>47 Millionen Euro</mark>. Erst
             auf Druck des Bundes musste Warburg das Geld später doch
             zurückzahlen.
           </p>
           <p class="party-highlight-description">
             Scholz behauptet bis heute, er könne sich an die Inhalte der Treffen
-            nicht erinnern. Diese <mark>„Erinnerungslücken“</mark> wiederholten
+            nicht erinnern. Diese <mark class="spd">„Erinnerungslücken“</mark> wiederholten
             sich im Untersuchungsausschuss, wo er jede Einflussnahme abstritt.
-            Besonders pikant: Beim SPD-Politiker <b>Johannes Kahrs</b> wurden
-            später <mark>über 200.000 Euro in bar</mark> in einem Schließfach
+            Besonders pikant: Beim <mark class="spd"><b>SPD-Politiker Johannes Kahrs</b></mark> wurden
+            später <mark class="spd">>über 200.000 Euro in bar</mark> in einem Schließfach
             gefunden.
           </p>
+        </div>
+        
 
           <div class="smallvideo-container">
             <div class="video-wrapper">
