--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Robert Habeck</title>
+    <title>Robert Habeck | factico.</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="../../styles.css" />
@@ -155,10 +155,11 @@
             Im September 2022 sorgte Robert Habeck für Kopfschütteln, als er in
             einer Talkshow erklärte, dass Unternehmen nicht zwangsläufig
             insolvent seien, nur weil sie nichts mehr verkaufen. Er behauptete,
-            Betriebe könnten auch einfach „<b class="gruene">aufhören zu produzieren</b>“, ohne direkt
-            pleitezugehen.
+            Betriebe könnten auch einfach „<b class="gruene"
+              >aufhören zu produzieren</b
+            >“, ohne direkt pleitezugehen.
           </p>
-          
+
           <p class="party-highlight-description">
             Diese Aussage stieß auf massive Kritik von Wirtschaftsexperten,
             Unternehmern und Oppositionellen, die Habeck vorwarfen, grundlegende
@@ -221,18 +222,20 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            In einem "NichtMehrGrünenWählerForum" beeindruckte <strong>Robert Habeck</strong> mit
-            seinen tiefgreifenden Kenntnissen über die Finanzwelt. Er erklärte,
-            dass die Eigenkapitalquote der Banken von 8% auf 20% erhöht werden
-            sollte.
+            In einem "NichtMehrGrünenWählerForum" beeindruckte
+            <strong>Robert Habeck</strong> mit seinen tiefgreifenden Kenntnissen
+            über die Finanzwelt. Er erklärte, dass die Eigenkapitalquote der
+            Banken von 8% auf 20% erhöht werden sollte.
           </p>
           <p class="party-highlight-description">
             Während einige vermeintliche "Experten" skeptisch auf diese
             zukunftsweisende Idee reagierten, sahen andere in Habecks Ansatz
             eine visionäre Weitsicht. Schließlich ist es nicht jedem gegeben,
             komplexe wirtschaftliche Zusammenhänge mit einer solchen
-            Leichtigkeit und Flexibilität zu interpretieren – von <mark class="gruene">"Basel III"</mark>
-            über <mark class="gruene">"eins zu vier"</mark> bis zu <mark class="gruene">"nicht abgedeckten 90 Prozent"</mark>.
+            Leichtigkeit und Flexibilität zu interpretieren – von
+            <mark class="gruene">"Basel III"</mark> über
+            <mark class="gruene">"eins zu vier"</mark> bis zu
+            <mark class="gruene">"nicht abgedeckten 90 Prozent"</mark>.
           </p>
 
           <div class="smallvideo-container">
