--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Olaf Scholz</title>
+    <title>Olaf Scholz | factico.</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="../../styles.css">
@@ -165,9 +165,7 @@
             Besonders pikant: Beim <mark class="spd"><b>SPD-Politiker Johannes Kahrs</b></mark> wurden
             später <mark class="spd">>über 200.000 Euro in bar</mark> in einem Schließfach
             gefunden.
-          </p>
-        </div>
-        
+          </p>        
 
           <div class="smallvideo-container">
             <div class="video-wrapper">
@@ -245,7 +243,7 @@
             Der <b>Wirecard-Skandal</b> war einer der größten Finanzskandale in
             Deutschland. Das Unternehmen <b>Wirecard</b> hatte über Jahre hinweg
             <b>Bilanzfälschungen</b> betrieben. Es stellte sich heraus, dass
-            Wirecard angeblich <mark>1,9 Milliarden Euro</mark> auf seinen
+            Wirecard angeblich <mark class="spd">1,9 Milliarden Euro</mark> auf seinen
             Konten hatte, die es nie besaß. Der Skandal führte zum
             <b>Zusammenbruch des Unternehmens</b>.
           </p>
@@ -253,15 +251,12 @@
             Eine wichtige Rolle spielte die <b>BaFin</b>, die
             <b>Warnungen ignorierte</b>. Besonders im Fokus stand
             <b>Olaf Scholz</b>, damals <b>Finanzminister</b>.
-            <mark
-              >Kritiker werfen ihm vor, den Skandal nicht rechtzeitig erkannt zu
+            <mark class="spd">Kritiker werfen ihm vor, den Skandal nicht rechtzeitig erkannt zu
               haben.</mark
             >
           </p>
           <p class="party-highlight-description">
-            <mark
-              >Scholz traf sich 2019 mit dem Wirecard-CEO Markus Braun.</mark
-            >
+            <mark class="spd">Scholz traf sich 2019 mit dem Wirecard-CEO Markus Braun.</mark>
             Es gab <b>Spekulationen</b>, dass er nicht ausreichend auf Warnungen
             reagiert habe. Diese <b>Vorwürfe verstärkten sich</b>, als er im
             Zusammenhang mit anderen <b>Finanzverwicklungen</b> in den Fokus
@@ -368,11 +363,11 @@
             zahlreicher Warnungen und behauptete, dass
             <b>die Bürger den Gipfel kaum bemerken würden</b>. Tatsächlich
             versank Hamburg jedoch in Chaos. Besonders
-            <mark>das Schanzenviertel</mark> wurde zeitweise von Randalierern
+            <mark class="spd">das Schanzenviertel</mark> wurde zeitweise von Randalierern
             kontrolliert, während die Polizei sich zurückzog.
           </p>
           <p class="party-highlight-description">
-            Die Bilanz: Über <mark>476 verletzte Polizisten</mark>, Schäden in
+            Die Bilanz: Über <mark class="spd">476 verletzte Polizisten</mark>, Schäden in
             Millionenhöhe und eine verunsicherte Bevölkerung. Scholz lehnte
             Rücktrittsforderungen ab und übernahm
             <b>keine politische Verantwortung</b>. Stattdessen verteidigte er
