--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Datenschutz</title>
+    <title>Datenschutz | factico.</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="../styles.css" />
