--- a/feedback/index.html
+++ b/feedback/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Feedback</title>
+    <title>Feedback | factico.</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="../styles.css" />
@@ -71,6 +71,5 @@
         </p>
       </div>
     </footer>
-
   </body>
 </html>
