--- a/gruene/index.html
+++ b/gruene/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Die Grünen</title>
+    <title>Die Grünen | factico.</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="../styles.css">
