--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -48,33 +48,58 @@
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
-          <p><strong>Studium:</strong> Friedrich Merz studierte von 1976 bis 1982 Rechtswissenschaften an der Universität Bonn und legte 1985 das Erste Juristische Staatsexamen ab. Anschließend absolvierte er sein Referendariat und legte 1986 das Zweite Juristische Staatsexamen ab.</p>
-          <p><strong>Berufsausbildung und Berufserfahrung:</strong> Merz arbeitete zunächst als Richter am Amtsgericht Saarbrücken (1986–1989). Ab 1989 war er als Rechtsanwalt tätig, unter anderem von 2002 bis 2004 bei der Kanzlei Cornelius Bartenbach Haesemann und Partner in Köln. Seit 2016 ist er Aufsichtsratsvorsitzender der deutschen Tochtergesellschaft von BlackRock, was ihm erheblichen Einfluss in der Wirtschaft verschaffte.</p>
-          <p><strong>Persönliches Leben:</strong> Seit 1981 ist Merz mit Charlotte Merz, einer deutschen Chemikerin und späteren Richterin, verheiratet. Das Paar hat drei Kinder und lebt in Arnsberg im Sauerland.</p>
+          <p>
+            <strong>Studium:</strong> Friedrich Merz studierte von 1976 bis 1982
+            Rechtswissenschaften an der Universität Bonn und legte 1985 das
+            Erste Juristische Staatsexamen ab. Anschließend absolvierte er sein
+            Referendariat und legte 1986 das Zweite Juristische Staatsexamen ab.
+          </p>
+          <p>
+            <strong>Berufsausbildung und Berufserfahrung:</strong> Merz
+            arbeitete zunächst als Richter am Amtsgericht Saarbrücken
+            (1986–1989). Ab 1989 war er als Rechtsanwalt tätig, unter anderem
+            von 2002 bis 2004 bei der Kanzlei Cornelius Bartenbach Haesemann und
+            Partner in Köln. Seit 2016 ist er Aufsichtsratsvorsitzender der
+            deutschen Tochtergesellschaft von BlackRock, was ihm erheblichen
+            Einfluss in der Wirtschaft verschaffte.
+          </p>
+          <p>
+            <strong>Persönliches Leben:</strong> Seit 1981 ist Merz mit
+            Charlotte Merz, einer deutschen Chemikerin und späteren Richterin,
+            verheiratet. Das Paar hat drei Kinder und lebt in Arnsberg im
+            Sauerland.
+          </p>
 
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>März 2025:</strong> Führender Kanzlerkandidat der Union nach der Bundestagswahl 2025, Verhandlungen über Koalition und Politikwechsel (Stand März 2025)
+            <strong>März 2025:</strong> Führender Kanzlerkandidat der Union nach
+            der Bundestagswahl 2025, Verhandlungen über Koalition und
+            Politikwechsel (Stand März 2025)
+          </p>
+          <p><strong>2022 – heute:</strong> Vorsitzender der CDU</p>
+          <p>
+            <strong>2002 – 2004:</strong> Stellvertretender Vorsitzender der
+            CDU/CSU-Bundestagsfraktion (Rücktritt Dezember 2004)
           </p>
           <p>
-            <strong>2022 – heute:</strong> Vorsitzender der CDU
+            <strong>2000 – 2002:</strong> Vorsitzender der
+            CDU/CSU-Bundestagsfraktion und Oppositionsführer
           </p>
           <p>
-            <strong>2002 – 2004:</strong> Stellvertretender Vorsitzender der CDU/CSU-Bundestagsfraktion (Rücktritt Dezember 2004)
-          </p>
-          <p>
-            <strong>2000 – 2002:</strong> Vorsitzender der CDU/CSU-Bundestagsfraktion und Oppositionsführer
-          </p>
-          <p>
-            <strong>1994 – 2009:</strong> Mitglied des Deutschen Bundestages (Wahlkreis Hochsauerlandkreis, bestes Ergebnis 2005 mit 57,7 %)
+            <strong>1994 – 2009:</strong> Mitglied des Deutschen Bundestages
+            (Wahlkreis Hochsauerlandkreis, bestes Ergebnis 2005 mit 57,7 %)
           </p>
           <p>
             <strong>1989 – 1994:</strong> Mitglied des Europäischen Parlaments
           </p>
 
           <h3>Politische Positionen</h3>
-          <p><strong>Schwerpunkte:</strong> Merz’ Standpunkte ändern sich häufig: von fiskalischer Disziplin zu Neuverschuldung, von harter Migrationspolitik zu flexibleren Ansätzen.</p>
-         
+          <p>
+            <strong>Schwerpunkte:</strong> Merz’ Standpunkte ändern sich häufig:
+            von fiskalischer Disziplin zu Neuverschuldung, von harter
+            Migrationspolitik zu flexibleren Ansätzen.
+          </p>
+
           <h3>FACTS</h3>
           <p>
             Im Wahlkampf 2025 versprach Friedrich Merz eine harte Linie bei der
@@ -130,32 +155,35 @@
         <div class="collapsible-content">
           <p class="party-highlight-description">
             Friedrich Merz trat im Wahlkampf 2025 als Verfechter der
-            <mark class="cdu">Schuldenbremse</mark> auf und versprach, fiskalische Disziplin
-            wiederherzustellen. Er kritisierte die Ampel-Regierung scharf für
-            ihre Haushaltspolitik und schloss neue Schulden kategorisch aus.
-            Doch kaum war die Wahl vorbei, kündigte er im März 2025 ein
-            <mark class="cdu">500-Milliarden-Euro-Investitionsprogramm</mark> mit der SPD an,
-            inklusive <mark class="cdu">Ausnahmen von der Schuldenbremse</mark> – ein klarer Bruch seiner
-            Versprechen.
-        </p>        
+            <mark class="cdu">Schuldenbremse</mark> auf und versprach,
+            fiskalische Disziplin wiederherzustellen. Er kritisierte die
+            Ampel-Regierung scharf für ihre Haushaltspolitik und schloss neue
+            Schulden kategorisch aus. Doch kaum war die Wahl vorbei, kündigte er
+            im März 2025 ein
+            <mark class="cdu">500-Milliarden-Euro-Investitionsprogramm</mark>
+            mit der SPD an, inklusive
+            <mark class="cdu">Ausnahmen von der Schuldenbremse</mark> – ein
+            klarer Bruch seiner Versprechen.
+          </p>
 
-<div class="smallvideo-container two-videos">
-  <div class="video-wrapper">
-            <iframe
-              src="https://www.youtube.com/embed/xoCBrQmMRAY?si=U9ioYBlH_BvJiV9X"
-              title="Der Verrat"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
-              </div>
-            <div class="video-wrapper"><iframe
-              src="https://www.youtube.com/embed/BYGHsJgWV6E?si=2A3ugXqTwp82-VbL"
-              title="„Verrat“, „Täuschung“, „Verar...“! Eskalation nach Merz' Schulden-Wortbruch!"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+          <div class="smallvideo-container two-videos">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/xoCBrQmMRAY?si=U9ioYBlH_BvJiV9X"
+                title="Der Verrat"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/BYGHsJgWV6E?si=2A3ugXqTwp82-VbL"
+                title="„Verrat“, „Täuschung“, „Verar...“! Eskalation nach Merz' Schulden-Wortbruch!"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-              </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Wahlkampf 2025 – März 2025
@@ -165,7 +193,8 @@
             <a
               href="https://www.zdf.de/nachrichten/politik/deutschland/merz-schulden-kehrtwende-finanzpolitik-100.html"
               target="_blank"
-              >ZDFheute: Merz' Wende in der Schuldenpolitik: Whatever it takes</a
+              >ZDFheute: Merz' Wende in der Schuldenpolitik: Whatever it
+              takes</a
             >
           </p>
 
@@ -180,10 +209,11 @@
 
     <section class="party-members">
       <h2 class="party-section-title">Weitere Mitglieder</h2>
-      <li class="party-member-item">Angela Merkel</li>
-      <li class="party-member-item">Markus Söder</li>
-      <li class="party-member-item">Armin Laschet</li>
-    </ul>
+      <ul class="party-members-list">
+        <li class="party-member-item">Angela Merkel</li>
+        <li class="party-member-item">Markus Söder</li>
+        <li class="party-member-item">Armin Laschet</li>
+      </ul>
     </section>
 
     <footer class="party-footer">
