--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -154,7 +154,7 @@
             <b>Warburg-Affäre</b>. Als <b>Bürgermeister von Hamburg</b> traf er
             sich mehrfach mit <b>Christian Olearius</b>, dem Mitinhaber der
             <b>Warburg Bank</b>. Kurz danach verzichtete die Stadt Hamburg auf
-            eine Steuer-Rückforderung von <mark class="spd">>47 Millionen Euro</mark>. Erst
+            eine Steuer-Rückforderung von <mark class="spd">47 Millionen Euro</mark>. Erst
             auf Druck des Bundes musste Warburg das Geld später doch
             zurückzahlen.
           </p>
@@ -162,8 +162,8 @@
             Scholz behauptet bis heute, er könne sich an die Inhalte der Treffen
             nicht erinnern. Diese <mark class="spd">„Erinnerungslücken“</mark> wiederholten
             sich im Untersuchungsausschuss, wo er jede Einflussnahme abstritt.
-            Besonders pikant: Beim <mark class="spd"><b>SPD-Politiker Johannes Kahrs</b></mark> wurden
-            später <mark class="spd">>über 200.000 Euro in bar</mark> in einem Schließfach
+            Besonders pikant: Beim <mark class="spd">SPD-Politiker Johannes Kahrs</mark> wurden
+            später <mark class="spd">über 200.000 Euro in bar</mark> in einem Schließfach
             gefunden.
           </p>        
 
