--- a/gruene/baerbock/index.html
+++ b/gruene/baerbock/index.html
@@ -122,37 +122,42 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-              Im Januar 2023 sorgte <b class="gruene">Baerbock</b> für einen Eklat, als sie in
-              einer Fragerunde im <b class="gruene">Europarat</b> erklärte: „Wir führen einen
-              <b class="gruene">Krieg gegen Russland</b> und nicht gegeneinander.“ Vielleicht lag
-              es an ihren <b class="gruene">englischen Sprachkenntnissen</b> oder an ihrem
-              <b class="gruene">Unvermögen, einen korrekten Satz zu formulieren</b>, aber diese
-              Aussage wurde von vielen als eine unbedachte und
-              <mark class="gruene">gefährliche Eskalation des Konflikts</mark> wahrgenommen. Das
-              Ergebnis war <mark class="gruene">Empörung</mark> – sowohl im In- als auch im
-              Ausland.
+            Im Januar 2023 sorgte <b class="gruene">Baerbock</b> für einen
+            Eklat, als sie in einer Fragerunde im
+            <b class="gruene">Europarat</b> erklärte: „Wir führen einen
+            <b class="gruene">Krieg gegen Russland</b> und nicht gegeneinander.“
+            Vielleicht lag es an ihren
+            <b class="gruene">englischen Sprachkenntnissen</b> oder an ihrem
+            <b class="gruene">Unvermögen, einen korrekten Satz zu formulieren</b
+            >, aber diese Aussage wurde von vielen als eine unbedachte und
+            <mark class="gruene">gefährliche Eskalation des Konflikts</mark>
+            wahrgenommen. Das Ergebnis war
+            <mark class="gruene">Empörung</mark> – sowohl im In- als auch im
+            Ausland.
           </p>
-        
+
           <p class="party-highlight-description">
-              Ihre Wortwahl ließ vermuten, dass sie die
-              <b class="gruene">Differenzierung zwischen einer politischen Auseinandersetzung</b>
-              und einem tatsächlichen <b class="gruene">Krieg</b> nicht richtig verstand.
-              Kritiker warfen ihr vor, die ohnehin gespannte Lage weiter zu
-              verschärfen und mit ihrer unüberlegten Rhetorik den internationalen
-              Konflikt unnötig anzuheizen – sicherlich keine Eigenschaft, die
-              einen deutschen Außenminister auszeichnen sollte.
+            Ihre Wortwahl ließ vermuten, dass sie die
+            <b class="gruene"
+              >Differenzierung zwischen einer politischen Auseinandersetzung</b
+            >
+            und einem tatsächlichen <b class="gruene">Krieg</b> nicht richtig
+            verstand. Kritiker warfen ihr vor, die ohnehin gespannte Lage weiter
+            zu verschärfen und mit ihrer unüberlegten Rhetorik den
+            internationalen Konflikt unnötig anzuheizen – sicherlich keine
+            Eigenschaft, die einen deutschen Außenminister auszeichnen sollte.
           </p>
-      
+
           <div class="smallvideo-container">
             <div class="video-wrapper">
-            <iframe
-              src="https://www.youtube.com/embed/TJCj3U33KPI?si=yGtVr3X_q-sypWOT"
-              title="Annalena Baerbock: We are fighting a war against Russia."
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+              <iframe
+                src="https://www.youtube.com/embed/TJCj3U33KPI?si=yGtVr3X_q-sypWOT"
+                title="Annalena Baerbock: We are fighting a war against Russia."
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Januar 2023
@@ -198,26 +203,28 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Im Februar 2023 sorgte <b class="gruene">Annalena Baerbock</b> für Erheiterung, als
-            sie von einer „<b class="gruene">360-Grad-Wende</b>“ sprach, die
-            <b class="gruene">Russland angeblich vollziehen müsste</b>, um den Krieg zu
-            beenden. Dieser Begriff, der eher nach einem
-            <mark class="gruene">Kreisverkehr</mark> als nach einer politischen Lösung klang,
-            sorgte nicht nur für <mark class="gruene">Kopfschütteln</mark>, sondern auch für
-            die Frage, ob sie den Unterschied zwischen einer echten Wendung und
+            Im Februar 2023 sorgte <b class="gruene">Annalena Baerbock</b> für
+            Erheiterung, als sie von einer „<b class="gruene">360-Grad-Wende</b
+            >“ sprach, die
+            <b class="gruene">Russland angeblich vollziehen müsste</b>, um den
+            Krieg zu beenden. Dieser Begriff, der eher nach einem
+            <mark class="gruene">Kreisverkehr</mark> als nach einer politischen
+            Lösung klang, sorgte nicht nur für
+            <mark class="gruene">Kopfschütteln</mark>, sondern auch für die
+            Frage, ob sie den Unterschied zwischen einer echten Wendung und
             einem Rückkehrpunkt verstanden hat.
           </p>
 
           <div class="smallvideo-container">
             <div class="video-wrapper">
-            <iframe
-              src="https://www.youtube.com/embed/eHNo4Sg6TTg?si=Ti4azlJXYUuxNmF1"
-              title="Baerbocks 360-Grad-Wende"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+              <iframe
+                src="https://www.youtube.com/embed/eHNo4Sg6TTg?si=Ti4azlJXYUuxNmF1"
+                title="Baerbocks 360-Grad-Wende"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Februar 2023
@@ -279,18 +286,16 @@
             sollte, in Frage.
           </p>
 
-          </div>
-
           <div class="smallvideo-container">
             <div class="video-wrapper">
-            <iframe
-              src="https://www.youtube.com/embed/6s3jGyDKUMA?si=lgUXgDwVTFsp31ZI"
-              title="Heftige Kritik an Aussage von Annalena Baerbock"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+              <iframe
+                src="https://www.youtube.com/embed/6s3jGyDKUMA?si=lgUXgDwVTFsp31ZI"
+                title="Heftige Kritik an Aussage von Annalena Baerbock"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> September 2022
