mark class="gruene" baerbock

--- a/gruene/baerbock/index.html
+++ b/gruene/baerbock/index.html
@@ -275,15 +275,16 @@
             Im September 2022 sorgte <b>Annalena Baerbock</b> für Aufsehen, als
             sie bei einer Veranstaltung in Prag sagte: „<b
               >Egal, was die deutschen Wähler denken</b
-            >…“. Diese Aussage, die nicht nur als <mark>arrogant</mark>, sondern
-            auch als zutiefst <mark>undemokratisch</mark> wahrgenommen wurde,
-            steht im direkten Widerspruch zu ihrer Aufgabe als Außenministerin.
-            Ihre Rolle ist es, die Interessen der
-            <mark>deutschen Bevölkerung</mark> zu vertreten, nicht ihre
-            persönlichen Ansichten über das politische Engagement der Wähler zu
-            stellen. Baerbock stellte mit dieser Äußerung das Vertrauen in die
-            <mark>demokratischen Werte</mark>, die sie eigentlich vertreten
-            sollte, in Frage.
+            >…“. Diese Aussage, die nicht nur als
+            <mark class="gruene">arrogant</mark>, sondern auch als zutiefst
+            <mark class="gruene">undemokratisch</mark> wahrgenommen wurde, steht
+            im direkten Widerspruch zu ihrer Aufgabe als Außenministerin. Ihre
+            Rolle ist es, die Interessen der
+            <mark class="gruene">deutschen Bevölkerung</mark> zu vertreten,
+            nicht ihre persönlichen Ansichten über das politische Engagement der
+            Wähler zu stellen. Baerbock stellte mit dieser Äußerung das
+            Vertrauen in die <mark class="gruene">demokratischen Werte</mark>,
+            die sie eigentlich vertreten sollte, in Frage.
           </p>
 
           <div class="smallvideo-container">
