--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -119,7 +119,7 @@
 
         <img
           class="bio-image"
-          src="https://i.imgur.com/cBolK6d.png"
+          src="https://i.imgur.com/RSL46ic.png"
           alt="Robert Habeck"
         />
       </div>
