--- a/gruene/baerbock/index.html
+++ b/gruene/baerbock/index.html
@@ -80,10 +80,14 @@
           <p>
             Annalena Baerbock sorgte wiederholt für Aufsehen, etwa durch
             Plagiatsvorwürfe und ihre auffällige Unfähigkeit, klare und
-            verständliche Sätze zu formulieren. 2023 sprach sie vom „Krieg gegen
-            Russland“ und äußerte, dass sich Russland „um 360 Grad drehen
-            müsste“, um den Krieg zu beenden. Zudem stimmte sie 2022 für eine
-            allgemeine Corona-Impfpflicht.
+            verständliche Sätze zu formulieren.
+          </p>
+          <p>
+            2023 sprach sie vom „Krieg gegen Russland“ und äußerte, dass sich
+            Russland „um 360 Grad drehen müsste“, um den Krieg zu beenden.
+          </p>
+          <p>
+            Zudem stimmte Baerbock 2022 für eine allgemeine Corona-Impfpflicht.
           </p>
         </div>
         <img
