--- a/gruene/baerbock/index.html
+++ b/gruene/baerbock/index.html
@@ -178,7 +178,7 @@
 
           <div class="party-highlight-hashtags">
             <span class="hashtag">#kriegserklaerung</span>
-            <a href="gruene.html">#grüne</a>
+            <a href="../">#gruene</a>
             <span class="hashtag">#baerbock</span>
             <span class="hashtag">#russland</span>
           </div>
