--- a/gruene/fester/index.html
+++ b/gruene/fester/index.html
@@ -156,8 +156,8 @@
           </p>
 
           <div class="party-highlight-hashtags">
-            <span class="hashtag">#fester</span>
-            <a href="gruene.html">#grüne</a>
+            <a href="./">#fester</a>
+            <a href="../">#gruene</a>
             <span class="hashtag">#impfpflicht</span>
             <span class="hashtag">#corona</span>
           </div>
@@ -234,8 +234,8 @@
           </p>
 
           <div class="party-highlight-hashtags">
-            <span class="hashtag">#fester</span>
-            <a href="gruene.html">#grüne</a>
+            <a href="./">#fester</a>
+            <a href="../">#gruene</a>
             <span class="hashtag">#wahlrecht</span>
           </div>
         </div>
