--- a/gruene/ganserer/index.html
+++ b/gruene/ganserer/index.html
@@ -162,8 +162,8 @@
           </p>
 
           <div class="party-highlight-hashtags">
-            <span class="hashtag">#ganserer</span>
-            <a href="gruene.html">#grüne</a>
+            <a href="./">#ganserer</a>
+            <a href="../">#gruene</a>
             <span class="hashtag">#bundestag</span>
             <span class="hashtag">#transrecht</span>
           </div>
