--- a/gruene/goering-eckardt/index.html
+++ b/gruene/goering-eckardt/index.html
@@ -164,7 +164,7 @@
           <div class="party-highlight-hashtags">
             <span class="hashtag">#migration</span>
             <span class="hashtag">#integration</span>
-            <a href="gruene.html">#gruene</a>
+            <a href="../">#gruene</a>
           </div>
         </div>
       </div>
@@ -233,9 +233,9 @@
           <div class="party-highlight-hashtags">
             <span class="hashtag">#ordnungsgeld</span>
             <span class="hashtag">#selbstbestimmungsgesetz</span>
-            <span class="hashtag">#ganserer</span>
             <span class="hashtag">#von-storch</span>
-            <a href="gruene.html">#gruene</a>
+            <a href="../ganserer/">#ganserer</a>
+            <a href="../">#gruene</a>
           </div>
         </div>
       </div>
