grüne facts absätze

--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -114,7 +114,7 @@
             Vetternwirtschaftsvorwürfen 2023 und dem gescheiterten
             Heizungsmodernisierungsgesetz in der Kritik.
           </p>
-          <p>Zudem stimmte er 2022 für die allgemeine Corona-Impfpflicht.</p>
+          <p>Zudem stimmte Habeck 2022 für die allgemeine Corona-Impfpflicht.</p>
         </div>
 
         <img
