--- a/gruene/lang/index.html
+++ b/gruene/lang/index.html
@@ -84,13 +84,18 @@
           </p>
           <h3>FACTS</h3>
           <p>
-            Lang fiel immer wieder durch ihre etwas fragwürdigen Aussagen auf,
+            Lang fiel immer wieder durch fragwürdige Aussagen auf,
             wie zum Beispiel ihre Versuche, die Essgewohnheiten der Deutschen zu
             revolutionieren, oder ihre Forderung nach einer Überprüfung der
             bereits abgeschlossenen Nordstream-Pipeline – ein Schritt, der eher
-            den Eindruck erweckte, sie sei nicht ganz im Bilde. Ihre Schätzung
+            den Eindruck erweckte, sie sei nicht ganz im Bilde.
+          </p>
+          <p>
+            Ihre Schätzung
             der Durchschnittsrente von 2000 Euro war ebenfalls weit von der
-            Realität entfernt. Im April 2022 stimmte sie zudem für die
+            Realität entfernt.
+          </p>
+          <p>Im April 2022 stimmte sie zudem für die
             allgemeine Corona-Impfpflicht.
           </p>
         </div>
